Fixed some heading alignments

--- a/TributePageProject/styles.css
+++ b/TributePageProject/styles.css
@@ -65,6 +65,9 @@ li {
     /* Add shadows to create the "card" effect */
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
+    padding-left: 10px;
+    padding-right: 10px;
+    text-align: center;
     width: 80%;
     display: flex;
     flex-direction: column;
@@ -95,6 +98,7 @@ li {
 
   #title {
     font-family: Georgia, "Times New Roman", Times, serif;
+    text-align: center;
   }
 
   .year {
@@ -121,11 +125,12 @@ li {
   .headings {
     display: flex; 
     align-items: center; 
-    justify-content: center; 
+    justify-content: flex-start; 
     font-family: 'Open Sans', sans-serif;
     color: #000000;
     background-color:#9ca435; 
-    width: 120%;
+    width: 100%;
+    padding-left: 10px;
     height: 45px;
   }
 
